--- a/activity/index.html
+++ b/activity/index.html
@@ -59,7 +59,7 @@
                 <input type="file" name="" id="acceptImg" style="display: none;">
             </div>
             <div class="tool">
-                <img src="./NewIcons/undo.svg" alt="" class="tool-img" id="undo" onclick="handleTool('undo')">
+                <img src="./NewIcons/Undo.svg" alt="" class="tool-img" id="undo" onclick="handleTool('undo')">
             </div>
             <div class="tool">
                 <img src="./NewIcons/Redo.svg" alt="" class="tool-img" id="redo" onclick="handleTool('redo')">
